--- a/src/sass/blocks/header.sass
+++ b/src/sass/blocks/header.sass
@@ -127,6 +127,8 @@
         right: 0
         background-color: $green
         min-height: 100vh
+        width: 100%
+        max-width: 100%
         z-index: 5
         padding: 40px 0
         overflow: scroll
